# space

./: .gitignore  Barnes_Hut_Simulation-x86_64.AppImage  CMakeLists.txt  LICENSE  README.md  bodies.js  camera.js  constants.js  main.js
.cache/clangd/index/: camera.hpp.4ACF46B189A1518E.idx  glad.c.2DD53117DDFF8418.idx  glad.h.AE358B48A165CCAA.idx  khrplatform.h.E0E62E6CDA0435F1.idx  main.cpp.A20BFDFACB0A2B6E.idx  shader.hpp.70C2CC9C9A54F905.idx
.github/workflows/: pipeline.yml  release.yml
2d_new/: .clangd  CMakeLists.txt  README.md
2d_new/src/: main.cpp
3d_old/: CMakeLists.txt  Space
3d_old/include/: bodies.hpp  shader.hpp
3d_old/shaders/: fragment.glsl  vertex.glsl
3d_old/src/: bodies.cpp
AppDir/: AppRun
AppDir/usr/share/applications/: barneshut.desktop
include/: bodies.hpp  body.hpp  body_octree.hpp  body_renderer.hpp  camera.hpp  constants.hpp  settings.hpp  shader.hpp
old-js/: bodies.js  camera.js  constants.js  index.html  main.js  shader.js  style.css
old-js/shaders/: fragment.glsl  vertex.glsl
shaders/: fragment.glsl  line_vertex.glsl  vertex.glsl
src/: bodies.cpp  body_octree.cpp  body_renderer.cpp  main.cpp
